# benfordlens

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: analysis.rs  cli.rs  data.rs  digit.rs  distribution.rs  lib.rs  main.rs  report.rs  statistics.rs  visualize.rs
tests/fixtures/: sample.csv
